tests/baselines/reference/interfaceWithCallSignaturesThatHidesBaseSignature2.errors.txt
interfaceWithCallSignaturesThatHidesBaseSignature2.ts(10,9): error TS2454: Variable 'd' is used before being assigned.


==== interfaceWithCallSignaturesThatHidesBaseSignature2.ts (1 errors) ====
    interface Foo {
        (): { a: number; b: number };
    }
    
    interface Derived extends Foo { // error
        (): { a: number };
    }
    
    var d: Derived;
    var r = d();
            ~
!!! error TS2454: Variable 'd' is used before being assigned.